# settl

./: .gitignore  CATAN_RULES_COMPACT.md  CLAUDE.md  Cargo.toml  DESIGN.md  LICENSE  README.md  deny.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  docs.yml  prepare-release.yml  release.yml  update-homebrew.yml
assets/: create_gif.sh  demo.tape
docs/: controls.md
homebrew/: settl.rb
personalities/: diplomat.toml  rusher.toml
scripts/: install.sh
src/: config.rs  headless.rs  hooks.rs  lib.rs  logging.rs  main.rs  system_info.rs  update_check.rs
src/game/: actions.rs  board.rs  dice.rs  event.rs  mod.rs  orchestrator.rs  rules.rs  save.rs  state.rs
src/llamafile/: download.rs  mod.rs  process.rs
src/player/: anthropic_client.rs  human.rs  llamafile_player.rs  llm.rs  llm_player.rs  mod.rs  personality.rs  prompt.rs  random.rs  tui_human.rs
src/replay/: event.rs  recorder.rs  save.rs
src/trading/: negotiation.rs  offers.rs
src/ui/: board_image.rs  board_view.rs  chat_panel.rs  flow_tests.rs  game_log.rs  input_tests.rs  layout.rs  menu.rs  mod.rs  resource_bar.rs  screens.rs  snapshot_tests.rs  testing.rs
src/ui/snapshots/: settl__ui__snapshot_tests__docs.snap  settl__ui__snapshot_tests__llamafile_setup.snap  settl__ui__snapshot_tests__main_menu.snap  settl__ui__snapshot_tests__new_game.snap  settl__ui__snapshot_tests__new_game_llamafile.snap  settl__ui__snapshot_tests__personalities.snap  settl__ui__snapshot_tests__playing_action_bar.snap  settl__ui__snapshot_tests__playing_action_bar_small.snap  settl__ui__snapshot_tests__playing_ai_tab.snap  settl__ui__snapshot_tests__playing_board_cursor.snap  settl__ui__snapshot_tests__playing_discard.snap  settl__ui__snapshot_tests__playing_fullscreen_chat.snap  settl__ui__snapshot_tests__playing_resource_picker.snap  settl__ui__snapshot_tests__playing_spectating.snap  settl__ui__snapshot_tests__playing_steal_target.snap  settl__ui__snapshot_tests__playing_trade_builder.snap  settl__ui__snapshot_tests__playing_trade_response.snap  (+1 more)
website/: astro.config.mjs  package-lock.json
(+8 files in other folders)
