[package]
name = "settl"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/Brake-Labs/settl"
authors = ["Brake Labs"]
description = "Terminal Settlers of Catan with LLM players"
keywords = ["catan", "tui", "ai", "llm", "terminal"]
categories = ["command-line-utilities", "games"]

[dependencies]
ratatui = "0.30"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.9"
crossterm = "0.29"
toml = "1.0"
genai = "0.6.0-beta.13"
async-trait = "0.1.89"
reqwest = "0.13.2"

[dev-dependencies]
proptest = "1"
insta = "1"
cargo-husky = { version = "1", default-features = false, features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy"] }

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev-release]
inherits = "release"
lto = false
codegen-units = 16
