[package]
name = "settl"
version = "0.1.4"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/mozilla-ai/settl"
authors = ["Mozilla AI"]
description = "Terminal hex-based settlement game with LLM players"
keywords = ["board-game", "tui", "ai", "llm", "terminal"]
categories = ["command-line-utilities", "games"]

[dependencies]
ratatui = "0.30"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
clap = { version = "4", features = ["derive"] }
rand = "0.10"
crossterm = "0.29"
toml = "1.1"
async-trait = "0.1.89"
reqwest = { version = "0.13.2", features = ["json"] }
log = "0.4"

[dev-dependencies]
proptest = "1"
insta = "1"
cargo-husky = { version = "1", default-features = false, features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy"] }

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev-release]
inherits = "release"
lto = false
codegen-units = 16
